--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: "backend/package-lock.json" # Adjusted path here
-    - run: npm install
-      working-directory: ./backend # Adjusted working directory here
+        cache-dependency-path: "backend/package-lock.json"
     - run: npm run build --if-present
       working-directory: ./backend
